MediaGalleryUi/view/adminhtml/web/css/source/_module.less
/**
 * Copyright © Magento, Inc. All rights reserved.
 * See COPYING.txt for license details.
 */

//
//  Variables
//  _____________________________________________

@color-folders-background: #a6a6a6;
@color-folders-background-selected: #cdecf6;
@color-folders-border: #7185f5;
@color-masonry-overlay: #d9631c;
@color-masonry-grey: #9e9e9e;
@color-masonry-white: #e1e1e1;
@color-masonry-steelblue: #4682b4;

& when (@media-common = true) {

    .media-gallery-delete-image-action,
    .delete-folder-confirmation-popup {
        
        .modal-content {
            word-wrap: anywhere;
        }
    }

    .media-gallery-container {

        .page-main-actions {
            .page-actions {
                .media-gallery-add-selected {
                    order: unset;
                }
            }

            & > .page-actions {
                & > button.no-display {
                    display: none;
                }
            }
        }
        .jstree-default .jstree-hovered {
            background: @color-folders-background;
            border-color: @color-folders-border;
            border-radius: 6px;
        }

        .jstree-default .jstree-leaf a .jstree-icon {
            background-position: -52px -16px;
        }


        .jstree-default a .jstree-icon {
            background-position: -52px -16px;
        }

        .jstree-default .jstree-no-dots .jstree-open > a > ins {
            background-position: -52px -38px;
            height: 20px;
            width: 29px;
        }

        .jstree a > ins {
            height: 22px;
            width: 20px;
        }

        .jstree-default .jstree-no-dots .jstree-leaf > ins {
            background-image: none;
        }

        .jstree-default ins {
            background-image: url("@{baseDir}Magento_MediaGalleryUi/images/d.png");
        }

        .jstree a {
            height: 30px;
            margin: 1px;
            padding-left: 6px;
            padding-top: 4px;
            width: 100%;
        }

        .jstree-default .jstree-clicked {
            background: @color-folders-background-selected;
            border: .14em solid @color-folders-border;
            border-radius: 6px;
        }

        .masonry-image-overlay {
            background-color: @color-masonry-overlay;
            font-size: 11px;
            margin-left: 120px;
            margin-top: 170px;
            padding: .3rem;
        }

        .media-gallery-image-details {
            float: left;
            list-style: none;
            margin-bottom: 0;
            position: absolute;
            width: 89%;

            .name {
                -webkit-box-orient: vertical;
                -webkit-line-clamp: 2;
                display: -webkit-box;
                font-size: 15px;
                font-weight: bold;
                line-height: 18px;
                max-height: 50px;
                overflow: hidden;
                text-overflow: ellipsis;
                word-wrap: anywhere;
            }

            .type {
                display: inline-block;
                font-size: 12px;
            }

            .dimensions {
                display: inline-block;
            }

            .source {
                display: inline-block;
            }
        }

        .media-gallery-image-actions {
            float: right;
            position: absolute;
            right: 0;
            width: 10%;

            .three-dots {
                &:before {
                    content: url("@{baseDir}Magento_MediaGalleryUi/images/3-dots.png");
                    cursor: pointer;
                }
            }
        }

        .media-gallery-image {
            height: 200px;
            margin: 0 auto;
            position: relative;
            text-align: center;
            width: 200px;
        }

        .masonry-image-description {
            background-color: @color-white;
            min-height: 90px;
            padding-top: 10px;
            position: relative;
        }

        .masonry-image-column {
            background-color: @color-masonry-white;
            width: 200px;
        }

        .media-directory-container {
            float: left;
            padding-right: 40px;
        }

        .media-gallery-image-block {
            height: 200px;
            margin: 0 auto;
            position: relative;

            &.selected {
                border: 5px solid @color-masonry-steelblue;
            }
        }

        .media-gallery-image {
            img {
                bottom: 0;
                height: auto;
                left: 0;
                margin: auto;
                max-height: 100%;
                max-width: 100%;
                padding: 5px;
                position: absolute;
                right: 0;
                top: 0;
                width: auto;
            }

            .action-menu {
                bottom: 0;
                float: right;
                left: auto;
                top: auto;
                z-index: 100;
            }
        }

        .adobe-stock-icon {
            margin-bottom: -6px;
            width: 29px;
        }

        .masonry-image-grid {
            margin: 10px 0;
        }
    }

    .media-gallery-image-details-modal {
        .page-action-buttons {
            float: right;
        }

        .image-type {
            .adobe-stock-icon {
                margin-bottom: -6px;
                width: 29px;
            }

            .type {
                color: @color-very-dark-gray;
            }
        }

        .image-details {
            .image-details-image {
                float: left;
                max-width: 70%;
                width: auto;

                img {
                    max-height: 650px;
                }
            }

            .image-details-sidebar {
                float: left;
                max-width: 30%;
                padding-left: 40px;

                .image-details-section {
                    margin-bottom: 40px;
                    word-wrap: anywhere;
                    .lib-clearfix();
                }

                h3.image-title {
                    font-weight: bold;
                }

                .attributes {
                    .attribute {
                        &:not(:last-child) {
                            margin-bottom: 20px;
                            padding-bottom: 20px;
                        }

                        & > * {
                            float: left;
                            width: 50%;
                        }

                        .value {
                            display: inline;
                            float: right;
                        }

                        .title {
                            color: @color-very-dark-gray;
                        }
                    }
                }

                .tags {
                    .tags-list {
                        margin-bottom: 10px;

                        .show-more-item {
                            display: none;
                        }

                        &.show-all-tags {
                            margin-bottom: 0;

                            .show-more-item {
                                display: inline;
                            }

                            & + .show-more-link-container {
                                display: none;
                            }
                        }
                    }
                }
            }
        }
    }
    .masonry-image-sortby {
        display: inline-block;
    }

    .masonry-results-number {
        display: inline-block;
        margin-right: 1.4rem;
    }
}

